--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name                     : &name "Yao Zhou"
 description              : &description "theoretical and computational plasma physicist"
 url                      : https://yaozhou1989.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "yaozhou1989/academicpages.github.io"
+repository               : "yaozhou1989/yaozhou1989.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yao Zhou"
   avatar           : "profile_1.jpg"
-  bio              : "Theoretical and Computational Plasma Physicist at Shanghai Jiao Tong University"
+  bio              : "Computational Plasma Physicist at Shanghai Jiao Tong University"
   location         : "Shanghai"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
