Minor format change

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yao Zhou"
   avatar           : "profile_1.jpg"
-  bio              : "Computational plasma physicist at Shanghai Jiao Tong University"
+  bio              : "Plasma physicist at Shanghai Jiao Tong University"
   location         : "Shanghai"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
