Added research page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,9 @@ main:
   - title: "Bio"
     url: /cv/
     
+  - title: "Research"
+    url: /research/
+        
   - title: "Publications"
     url: /publications/
 
@@ -12,9 +15,6 @@ main:
 #  - title: "Teaching"
 #    url: /teaching/    
     
-#  - title: "Portfolio"
-#    url: /portfolio/
-        
 #  - title: "Blog Posts"
 #    url: /year-archive/
     
