Added office address

--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Yao Zhou"
   avatar           : "profile_1.jpg"
   bio              : "Computational plasma physicist at Shanghai Jiao Tong University"
-  location         : "Shanghai"
+  location         : "363 Science Bldg #6"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    :  "https://scholar.google.com/citations?user=I-bLri0AAAAJ&hl=en"
